# akiya-lens

./: .gitignore  LICENSE  README.md  akiya_train.ipynb  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/v1/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: etl_project.yaml  ref_project.yaml
docs/: OSM_POI密度ETL仕様.md  projects.md  人口動態ETL仕様.md  地価公示ETL仕様.md  市区町村マスタETL仕様.md  残差モデルとアプリ設計仕様.md  気象データETL仕様.md  特徴量ETL仕様.md  空き家データETL仕様.md  財務情報ETL仕様.md
models/: catboost_residual_model.cbm  final_diff_model.cbm  vacancy_catboost_residual_model.cbm
notebook/: akiya_lens_残差学習.ipynb  akiya_lens_残差学習_財務情報除く.ipynb  akiya_lens_特徴量データ確認.ipynb  akiya_lens_財務情報除く_5年変化率_中心座標追加.ipynb  akiya_train.ipynb  train_model_vacancy_rate_diff.py  train_residual_catboost.py  vacancy_rate_clusters.py  vacancy_rate_regression.py  vacancy_rate_residual.py  vacancy_rate_residual_OOF.py
(+70 files in other folders)
